TestSuite/Syntax/Errors/Report1.tjp
project test "Test Project" "$Id" 2000-01-01 2000-03-01

htmltaskreport "Report_task.html" {
	columns no, foo, name 
}

